--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-star-rating-component": "^1.4.1",
     "@types/styled-components": "^5.1.15",
     "babel": "^6.23.0",
+    "google-maps-react": "^2.0.6",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
